:bug: Fixes all z-indexes (credits to https://coder-coder.com/z-index-isnt-working)

--- a/src/styles/Global.scss
+++ b/src/styles/Global.scss
@@ -1,5 +1,3 @@
-// TODO design: check if all z-indexes are working properly (https://coder-coder.com/z-index-isnt-working/)
-
 @font-face {
     font-family: Lexend;
     src: url('../fonts/OpenSans-Regular.ttf');
@@ -30,7 +28,9 @@ img, svg {
     z-index: 2;
 }
 
-p, h1, h2, h3, h4, h5, h6, a {
+p, h1, h2, h3, h4, h5, h6, a, td {
+    position: relative;
+
     z-index: 1;
 }
 
