--- a/src/styles/Settings.scss
+++ b/src/styles/Settings.scss
@@ -62,7 +62,7 @@
 
             background-color: #e6e6e6;
 
-            z-index: -4 !important;
+            z-index: 4;
 
             border: none;
             border-radius: .4rem .4rem 0 .4rem;
